--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
     "cra-template": "1.2.0",
+    "leaflet": "^1.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-leaflet": "^4.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
